# cpspatial

./: CMakeLists.txt  README.md  cl_error_code.cpp  cpspatial.cpp  job_atom.cpp  job_atom.hpp  kernel_info.config  kernel_info.cpp  kernel_info.hpp  opencl_util.cpp  opencl_util.hpp
kernels/: vecadd_LS.cl  vecadd_nopt.cl  vecadd_nopt_measure.cl  vecadd_pt.cl  vecadd_pt_measure.cl
routines/: vecadd_ckpt_pt_preempt_1_336.routine  vecadd_ckpt_pt_preempt_1_704.routine  vecadd_ckpt_pt_resume1_0.routine  vecadd_ckpt_pt_resume1_1000.routine  vecadd_ckpt_pt_resume1_1008.routine  vecadd_ckpt_pt_resume1_1016.routine  vecadd_ckpt_pt_resume1_1024.routine  vecadd_ckpt_pt_resume1_1032.routine  vecadd_ckpt_pt_resume1_104.routine  vecadd_ckpt_pt_resume1_1040.routine  vecadd_ckpt_pt_resume1_1048.routine  vecadd_ckpt_pt_resume1_1056.routine  vecadd_ckpt_pt_resume1_1064.routine  vecadd_ckpt_pt_resume1_1072.routine  vecadd_ckpt_pt_resume1_1080.routine  vecadd_ckpt_pt_resume1_1088.routine  vecadd_ckpt_pt_resume1_112.routine  vecadd_ckpt_pt_resume1_120.routine  vecadd_ckpt_pt_resume1_128.routine  vecadd_ckpt_pt_resume1_136.routine  vecadd_ckpt_pt_resume1_144.routine  vecadd_ckpt_pt_resume1_152.routine  vecadd_ckpt_pt_resume1_16.routine  vecadd_ckpt_pt_resume1_160.routine  vecadd_ckpt_pt_resume1_168.routine  vecadd_ckpt_pt_resume1_176.routine  vecadd_ckpt_pt_resume1_184.routine  vecadd_ckpt_pt_resume1_192.routine  vecadd_ckpt_pt_resume1_200.routine  vecadd_ckpt_pt_resume1_208.routine  vecadd_ckpt_pt_resume1_216.routine  vecadd_ckpt_pt_resume1_224.routine  vecadd_ckpt_pt_resume1_232.routine  (+304 more)
